<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >



    <!-- <Preference
         android:title="@string/title_Orders"
         android:key="@string/key_orders_number" />-->



    <Preference
        android:title="@string/about_header"
        android:key="@string/key_about_us" />

    <!--<Preference
        android:title="My Wallets"
        android:key="wallet" />
-->

   <!-- <Preference
        android:key="@string/key_log_out"
        android:title="@string/title_log_out" />-->

    <!-- preference opens url in browser -->
    <Preference
        android:summary="@string/summary_faq"
        android:title="@string/title_faq">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/url_faq" />
    </Preference>

    <Preference android:title="@string/privacy_policy">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/url_privacy" />
    </Preference>

    <Preference android:title="@string/title_terms">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/url_terms" />
    </Preference>



    <Preference
        android:title="@string/contact_header"
        android:key="@string/key_contact" />


    <Preference
        android:title="Rate Us"
        android:key="@string/key_contact" />

</PreferenceScreen>